--- a/pom.xml
+++ b/pom.xml
@@ -5,6 +5,8 @@
 	<groupId>test</groupId>
 	<artifactId>testjpa</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
+		<packaging>war</packaging>
+	
 		<build>
 		<plugins>
 			<plugin>
