--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -23,4 +23,12 @@ http://java.sun.com/xml/ns/javaee/web-app_3_0.xsd"
         <servlet-name> Jersey Web Application </servlet-name>
         <url-pattern> /rest/* </url-pattern>
     </servlet-mapping>
+    <filter>
+   		<filter-name>CorsFilter</filter-name>
+   		<filter-class>org.apache.catalina.filters.CorsFilter</filter-class>
+    </filter>
+    <filter-mapping>
+    <filter-name>CorsFilter</filter-name>
+    <url-pattern>/*</url-pattern>
+    </filter-mapping>
 </web-app>
